--- a/Project-part-1/services.html
+++ b/Project-part-1/services.html
@@ -84,7 +84,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Papa. All rights reserved.</p>
+            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
