--- a/Project-part-1/contact.html
+++ b/Project-part-1/contact.html
@@ -59,14 +59,19 @@
             <section>
                 <h2>Find Us</h2>
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!..." 
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.8659975156884!2d-79.3923407893384!3d43.671756670980706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2e0b64e1140d%3A0xd11156503e310196!2sSpa%20at%20Four%20Seasons%20Toronto!5e0!3m2!1sen!2sca!4v1758812594100!5m2!1sen!2sca" 
+                  width="600" 
+                  height="450" 
+                  style="border:0;" 
+                  allowfullscreen="" 
+                  loading="lazy" 
+                  referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Papa. All rights reserved.</p>
+            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
