--- a/Project-part-1/index.html
+++ b/Project-part-1/index.html
@@ -49,7 +49,7 @@
         </main>
 
         <footer role="contentinfo">
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Papa. All rights reserved.</p>
+            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
