changing html files

--- a/Project-part-1/index.html
+++ b/Project-part-1/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Papa">
     <meta name="description" content="Welcome to the Striped Umbrella Spa - luxury resort and spa services.">
     <title>Home | Striped Umbrella Spa</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -21,7 +22,7 @@
             </nav>
         </header>
 
-        <main role="main">
+        <main role="main" class="content">
             <article>
                 <h1>Welcome To Our Amazing Spa</h1>
                 <p>
@@ -31,7 +32,7 @@
                 </p>
 
                 <figure>
-                    <img src="assets/images/pool.jpg" alt="Resort pool at Striped Umbrella Spa">
+                    <img src="assets/images/pool.jpg" alt="Resort pool at Striped Umbrella Spa" class="img-centre">
                     <figcaption>Our pool — the heart of relaxation and wellness.</figcaption>
                 </figure>
 
@@ -39,8 +40,6 @@
                     <h2>Resort Highlights</h2>
                     <video width="400" controls poster="assets/images/sea_spa_logo.jpg">
                         <source src="assets/media/w3schooldemo.mp4" type="video/mp4">
-                        <source src="assets/media/w3schooldemo.ogg" type="video/ogg">
-                        <source src="assets/media/w3schooldemo.webm" type="video/webm">
                         Sorry, your browser doesn’t support this video. 
                         <a href="assets/media/w3schooldemo.mp4">Download instead</a>.
                     </video>
@@ -49,7 +48,7 @@
         </main>
 
         <footer role="contentinfo">
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
+            <p>© 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
