--- a/Project-part-1/about.html
+++ b/Project-part-1/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Striped Umbrella Spa</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,7 @@
             </nav>
         </header>
 
-        <main>
+        <main class="content">
             <h1>What you need to know about spa!</h1>
             <p>
                 A spa is a location where mineral-rich water is used for medicinal baths. Spas have been popular for centuries,
@@ -66,7 +67,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
+            <p>© 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
