--- a/Project-part-1/services.html
+++ b/Project-part-1/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services | Striped Umbrella Spa</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,7 @@
             </nav>
         </header>
 
-        <main>
+        <main class="content">
             <h1>What we can provide you!</h1>
 
             <section>
@@ -38,7 +39,7 @@
 
             <section>
                 <h2>Facials & Body Treatments</h2>
-                <table border="1">
+                <table>
                     <thead>
                         <tr>
                             <th colspan="2">The service you need for your body</th>
@@ -84,7 +85,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
+            <p>© 2023 ILAC and EFREI Paris – HTML-CSS major lab-work — created by Aks. All rights reserved.</p>
         </footer>
     </div>
 </body>
