--- a/bootstrap-lab/index.html
+++ b/bootstrap-lab/index.html
@@ -38,21 +38,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://placehold.co/1920x600/212529/white?text=Welcome+to+Development" class="d-block w-100" alt="Slide 1">
+                    <img src="assets/images/image1.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Slide 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Modern Web Development</h5>
                         <p>Learn the latest tools and technologies.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://placehold.co/1920x600/343a40/white?text=Learn+Coding" class="d-block w-100" alt="Slide 2">
+                    <img src="assets/images/image2.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Slide 2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Hands-on Practice</h5>
                         <p>Build real world projects.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://placehold.co/1920x600/495057/white?text=Achieve+Goals" class="d-block w-100" alt="Slide 3">
+                    <img src="assets/images/image3.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Slide 3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Career Growth</h5>
                         <p>Take your skills to the next level.</p>
@@ -77,7 +77,7 @@
                 <button class="btn btn-dark btn-lg mt-3">Sign up now!</button>
             </div>
             <div class="col-md-6">
-                <img src="https://placehold.co/600x400/png?text=Coding+Setup" class="img-fluid rounded shadow" alt="Developer">
+                <img src="assets/images/image1.jpg" class="img-fluid rounded shadow" alt="Developer">
             </div>
         </div>
     </section>
@@ -126,13 +126,13 @@
                     <button class="btn btn-primary">Front-end details <i class="fas fa-arrow-right"></i></button>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="https://placehold.co/500x300/png?text=Front+End" class="img-fluid" alt="Front End">
+                    <img src="assets/images/image2.jpg" class="img-fluid" alt="Front End">
                 </div>
             </div>
 
             <div class="row align-items-center bg-light rounded p-4 border">
                 <div class="col-md-6 order-md-1 order-2 text-center">
-                    <img src="https://placehold.co/500x300/png?text=Back+End" class="img-fluid" alt="Back End">
+                    <img src="assets/images/image3.jpg" class="img-fluid" alt="Back End">
                 </div>
                 <div class="col-md-6 order-md-2 order-1">
                     <h2>Back-End Development</h2>
@@ -269,7 +269,6 @@
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
-
             <div class="col-md-6 contact-info">
                 <h2 class="mb-3">Contact Info</h2>
                 <ul class="list-unstyled lh-lg">
