--- a/JS-Assignment/excel.html
+++ b/JS-Assignment/excel.html
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p>ILAC & EFREI - HTML, CSS, and JavaScript Assignment</p>
+        <p>HTML, CSS, and JavaScript Assignment</p>
     </footer>
 
     <script src="js/script.js"></script>
