--- a/lab4-geometry/index.html
+++ b/lab4-geometry/index.html
@@ -3,135 +3,218 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Geometry Lab 4</title>
+    <title>Geometry Dashboard</title>
     <style>
-        .wrapper {
-            width: 70%;
-            margin: 0 auto;
-            background-color: #f0f8ff;
+        /* RESET & BASE STYLES */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: system-ui, -apple-system, sans-serif;
+            background-color: #2c3e50; /* Dark Blue Background */
+            color: #333;
+            line-height: 1.6;
             padding: 20px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            min-height: 100vh;
-        }
-        
-        section {
-            width: 65%;
-            margin: 20px auto;
-            background-color: #e6e6e6;
-            border: 2px solid #333;
-            padding: 5px;
-            box-sizing: border-box;
         }
 
-        h1, p, h2 {
+        /* HEADER STYLES */
+        header {
             text-align: center;
+            color: #ecf0f1;
+            margin-bottom: 40px;
         }
 
-        div {
+        header h1 {
+            font-size: 2.5rem;
             margin-bottom: 10px;
-            padding: 5px;
+        }
+
+        header p {
+            color: #bdc3c7;
+            font-size: 1.1rem;
+        }
+
+        /* GRID LAYOUT - FORCED 2x2 */
+        .grid-container {
+            display: grid;
+            /* This forces exactly 2 columns of equal width */
+            grid-template-columns: 1fr 1fr; 
+            gap: 25px;
+            max-width: 900px; /* Made slightly narrower to look nice */
+            margin: 0 auto;
+        }
+
+        /* CARD STYLES */
+        .card {
+            background-color: #ffffff;
+            border-radius: 12px;
+            padding: 25px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+            transition: transform 0.2s ease;
+            border-top: 5px solid #3498db; 
+        }
+
+        .card:hover {
+            transform: translateY(-5px); 
+        }
+
+        .card h2 {
+            margin-bottom: 20px;
+            color: #2c3e50;
+            font-size: 1.5rem;
+            border-bottom: 2px solid #f0f0f0;
+            padding-bottom: 10px;
+        }
+
+        /* FORM ELEMENTS */
+        .input-group {
+            margin-bottom: 15px;
         }
 
         label {
-            display: inline-block;
-            width: 250px;
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+            font-size: 0.9rem;
+            color: #555;
         }
 
-        .go {
-            text-align: center;
+        input[type="text"] {
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #e0e0e0;
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: border-color 0.3s;
         }
+
+        input[type="text"]:focus {
+            border-color: #3498db;
+            outline: none;
+        }
+
+        input[readonly] {
+            background-color: #f8f9fa;
+            color: #27ae60;
+            font-weight: bold;
+            border-color: #bdc3c7;
+            cursor: not-allowed;
+        }
+
+        /* BUTTON STYLES */
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background-color: #2980b9;
+        }
+
+        /* ACCENT COLORS */
+        #triangle { border-top-color: #e74c3c; } 
+        #triangle button { background-color: #e74c3c; }
+        #triangle button:hover { background-color: #c0392b; }
+
+        #square { border-top-color: #f1c40f; } 
+        #square button { background-color: #f1c40f; color: #333; }
+        #square button:hover { background-color: #f39c12; }
+
+        #rectangle { border-top-color: #9b59b6; } 
+        #rectangle button { background-color: #9b59b6; }
+        #rectangle button:hover { background-color: #8e44ad; }
+
+        /* MOBILE RESPONSIVENESS */
+        /* If screen is smaller than 768px (like a phone), switch to 1 column */
+        @media (max-width: 768px) {
+            .grid-container {
+                grid-template-columns: 1fr;
+            }
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="wrapper">
-        <h1 id="top">Basic Geometry</h1>
-        <p>In this section, we are going to find the Area of some two-dimension shapes</p>
-        <p>You can click on any shape below:</p>
+    <header>
+        <h1>Geometry Lab</h1>
+        <p>Calculate areas for 2D shapes instantly.</p>
+    </header>
+
+    <div class="grid-container">
         
-        <ul>
-            <li><a href="#circle">Circle</a></li>
-            <li><a href="#triangle">Triangle</a></li>
-            <li><a href="#square">Square</a></li>
-            <li><a href="#rectangle">Rectangle</a></li>
-        </ul>
-
-        <section id="circle">
-            <h2>Circle Area</h2>
-            <div>
-                <label for="radius">Enter the value of the circle's radius:</label>
-                <input type="text" id="radius">
+        <section class="card" id="circle">
+            <h2>Circle</h2>
+            <div class="input-group">
+                <label for="radius">Radius (r):</label>
+                <input type="text" id="radius" placeholder="Enter radius...">
             </div>
-            <div>
-                <label for="circle-area">Result:</label>
-                <input type="text" id="circle-area" readonly>
+            <div class="input-group">
+                <label for="circle-area">Area Result:</label>
+                <input type="text" id="circle-area" readonly placeholder="0.00">
             </div>
-            <hr>
-            <button onclick="getCircleArea()">Calculate</button>
-            <div class="go">
-                <a href="#top">Go to top</a>
-            </div>
+            <button onclick="getCircleArea()">Calculate Area</button>
         </section>
 
-        <section id="triangle">
-            <h2>Triangle Area</h2>
-            <div>
-                <label for="triangle-base">Enter the value of the triangle's base:</label>
-                <input type="text" id="triangle-base">
+        <section class="card" id="triangle">
+            <h2>Triangle</h2>
+            <div class="input-group">
+                <label for="triangle-base">Base (b):</label>
+                <input type="text" id="triangle-base" placeholder="Enter base...">
             </div>
-            <div>
-                <label for="triangle-height">Enter the value of the triangle's vertical height:</label>
-                <input type="text" id="triangle-height">
+            <div class="input-group">
+                <label for="triangle-height">Vertical Height (h):</label>
+                <input type="text" id="triangle-height" placeholder="Enter height...">
             </div>
-            <div>
-                <label for="triangle-area">Result:</label>
-                <input type="text" id="triangle-area" readonly>
+            <div class="input-group">
+                <label for="triangle-area">Area Result:</label>
+                <input type="text" id="triangle-area" readonly placeholder="0.00">
             </div>
-            <hr>
-            <button onclick="getTriangleArea()">Calculate</button>
-            <div class="go">
-                <a href="#top">Go to top</a>
-            </div>
+            <button onclick="getTriangleArea()">Calculate Area</button>
         </section>
 
-        <section id="square">
-            <h2>Square Area</h2>
-            <div>
-                <label for="square-side">Enter the value of the square's side:</label>
-                <input type="text" id="square-side">
+        <section class="card" id="square">
+            <h2>Square</h2>
+            <div class="input-group">
+                <label for="square-side">Side Length (s):</label>
+                <input type="text" id="square-side" placeholder="Enter side...">
             </div>
-            <div>
-                <label for="square-area">Result:</label>
-                <input type="text" id="square-area" readonly>
+            <div class="input-group">
+                <label for="square-area">Area Result:</label>
+                <input type="text" id="square-area" readonly placeholder="0.00">
             </div>
-            <hr>
-            <button onclick="getSquareArea()">Calculate</button>
-            <div class="go">
-                <a href="#top">Go to top</a>
-            </div>
+            <button onclick="getSquareArea()">Calculate Area</button>
         </section>
 
-        <section id="rectangle">
-            <h2>Rectangle Area</h2>
-            <div>
-                <label for="rectangle-width">Enter the value of the rectangle's width:</label>
-                <input type="text" id="rectangle-width">
+        <section class="card" id="rectangle">
+            <h2>Rectangle</h2>
+            <div class="input-group">
+                <label for="rectangle-width">Width (w):</label>
+                <input type="text" id="rectangle-width" placeholder="Enter width...">
             </div>
-            <div>
-                <label for="rectangle-height">Enter the value of the rectangle's height:</label>
-                <input type="text" id="rectangle-height">
+            <div class="input-group">
+                <label for="rectangle-height">Height (h):</label>
+                <input type="text" id="rectangle-height" placeholder="Enter height...">
             </div>
-            <div>
-                <label for="rectangle-area">Result:</label>
-                <input type="text" id="rectangle-area" readonly>
+            <div class="input-group">
+                <label for="rectangle-area">Area Result:</label>
+                <input type="text" id="rectangle-area" readonly placeholder="0.00">
             </div>
-            <hr>
-            <button onclick="getRectangleArea()">Calculate</button>
-            <div class="go">
-                <a href="#top">Go to top</a>
-            </div>
+            <button onclick="getRectangleArea()">Calculate Area</button>
         </section>
+
     </div>
 
     <script>
@@ -188,4 +271,4 @@
         }
     </script>
 </body>
-</html>
+</html> 
