--- a/JS-Assignment/excel.html
+++ b/JS-Assignment/excel.html
@@ -66,7 +66,7 @@
     </main>
 
     <footer>
-        <p>© 2025 ILAC & EFREI Project</p>
+        <p>© 2025 ILAC Project</p>
     </footer>
 
     <script src="js/script.js"></script>
